--- a/style.css
+++ b/style.css
@@ -44,13 +44,13 @@ textarea {
 }
 
 .past {
-  background-color: #d3d3d3;
+  background-color: red;
   color: white;
 }
 
 .present {
-  background-color: #ff6961;
-  color: white;
+  background-color: white;
+  color: black;
 }
 
 .future {
