--- a/style.css
+++ b/style.css
@@ -33,9 +33,9 @@ textarea {
 
 .row {
   white-space: pre-wrap;
-  height: 80px;
+  height: 100px;
   border-top: 1px solid white;
-  margin-top: 10px;
+  margin: 10px;
 }
 
 .hour {
@@ -59,15 +59,20 @@ textarea {
   color: white;
 }
 
-.saveBtn {
+.time {
+  font-weight: 1000;
+  font-size: large;
+}
+
+/* .saveBtn {
   border-left: 1px solid black;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
   background-color: #06aed5;
   color: white;
-}
-
+} */
+/* 
 .saveBtn i:hover {
   font-size: 20px;
   transition: all 0.3s ease-in-out;
-}
+} */
